fix: Remove asigning 100% height to info container to prevent horizontal upward alignment

--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -49,6 +49,5 @@
 }
 
 .InfoContainer {
-  height: 100%;
   flex: 1;
 }
